--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -6,7 +6,8 @@
       width: 100%;text-align: left;display: block;margin-bottom: 10px;font-size: 14px;font-weight: bold;
     }
     .input-box {
-      width: 100%;height: 40px;position: relative;
+      width: 100%;height: 40px;position: relative;font-size:14px;
     }
   }
 }
+$bg-color: #000;
