--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,3 @@
 #app, .bg{overflow: hidden;min-width:100%;min-height:100%;min-width:100vw;min-height:100vh;}
 .boxContent{overflow: hidden;width:100%;height:100%;width:100vw;height:100vh;position:relative;}
-.boxConntent1{width:100%;height:100%;position:relative;overflow: auto;}
+.boxConntent1, .van-pull-refresh, .van-pull-refresh__track{width:100%;height:100%;position:relative;overflow: auto;}
