add timelockToTimelock and change view

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -10,4 +10,13 @@
     }
   }
 }
+.btn-yellow {
+  background: #e9bf29; color: #fff;border: 1px  solid transparent;border-radius: 44px;
+}
+.btn-radius {
+  border: 1px  solid transparent;border-radius: 44px;
+}
+.van-tabs__line {
+  background: #e9bf29;
+}
 $bg-color: #000;
